@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2015 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2015-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,10 +23,14 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 import static org.nuxeo.ecm.core.api.VersioningOption.MAJOR;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_DEFAULT_LONG_PROP;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_DOC_TYPE;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_LONG_PROP;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_SCALAR_SCHEMA;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_STRING_PROP;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -37,7 +41,7 @@ import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -58,7 +62,6 @@ import org.nuxeo.ecm.core.model.Session;
 import org.nuxeo.ecm.core.schema.SchemaManager;
 import org.nuxeo.ecm.core.schema.SchemaManagerImpl;
 import org.nuxeo.ecm.core.schema.types.CompositeType;
-import org.nuxeo.ecm.core.schema.types.Field;
 import org.nuxeo.ecm.core.schema.types.Schema;
 import org.nuxeo.ecm.core.test.CoreFeature;
 import org.nuxeo.ecm.core.test.annotations.Granularity;
@@ -106,7 +109,7 @@ public class TestDocument {
     }
 
     @FunctionalInterface
-    private interface TriConsumer<T, U, V> {
+    protected interface TriConsumer<T, U, V> {
         void accept(T t, U u, V v);
     }
 
@@ -155,7 +158,7 @@ public class TestDocument {
         Document root = session.getRootDocument();
         Document doc1 = root.addChild("doc", "TestDocument");
         Document doc2 = root.addChild("doc2", "File");
-        doc1.setValue("tp:complexList", Collections.singletonList(Collections.emptyMap()));
+        doc1.setValue("tp:complexList", List.of(Map.of()));
 
         BiConsumer<String, Object> c1 = (xpath, value) -> DocumentSetValue.accept(doc1, xpath, value);
         checkSet(c1, "tp:complexList", Long.valueOf(0),
@@ -189,9 +192,9 @@ public class TestDocument {
 
         // array
         doc.setValue("dc:subjects", new Object[] { "a", "b" });
-        assertEquals(Arrays.asList("a", "b"), Arrays.asList((Object[]) doc.getValue("dc:subjects")));
-        doc.setValue("dc:subjects", Arrays.asList("c", "d"));
-        assertEquals(Arrays.asList("c", "d"), Arrays.asList((Object[]) doc.getValue("dc:subjects")));
+        assertEquals(List.of("a", "b"), List.of((Object[]) doc.getValue("dc:subjects")));
+        doc.setValue("dc:subjects", List.of("c", "d"));
+        assertEquals(List.of("c", "d"), List.of((Object[]) doc.getValue("dc:subjects")));
 
         // blob
         Blob blob = Blobs.createBlob("hello world!");
@@ -226,9 +229,9 @@ public class TestDocument {
         vignette.put("width", size1);
         vignette.put("content", blob);
         vignettes.add(vignette); // 0
-        vignettes.add(Collections.singletonMap("height", size3)); // 1
-        vignettes.add(Collections.singletonMap("height", size3)); // 2
-        vignettes.add(Collections.singletonMap("height", size3)); // 3
+        vignettes.add(Map.of("height", size3)); // 1
+        vignettes.add(Map.of("height", size3)); // 2
+        vignettes.add(Map.of("height", size3)); // 3
 
         // set recursive
         doc.setValue("cmpf:attachedFile", attachedFile);
@@ -281,12 +284,12 @@ public class TestDocument {
         Object list = doc.getValue("cmpf:attachedFile/vignettes");
         assertTrue(list instanceof List);
         assertEquals(4, ((List<?>) list).size());
-        assertEquals(Arrays.asList(v0, ev1, ev2or3, ev2or3), list);
+        assertEquals(List.of(v0, ev1, ev2or3, ev2or3), list);
 
         // get recursive map
         Map<String, Object> atf = new HashMap<>();
         atf.put("name", null);
-        atf.put("vignettes", Arrays.asList(v0, ev1, ev2or3, ev2or3));
+        atf.put("vignettes", List.of(v0, ev1, ev2or3, ev2or3));
         assertEquals(atf, doc.getValue("cmpf:attachedFile"));
     }
 
@@ -296,7 +299,7 @@ public class TestDocument {
         Document doc = root.addChild("doc", "File");
 
         Blob blob = Blobs.createBlob("My content");
-        doc.setValue("files", Collections.singletonList(Collections.singletonMap("file", blob)));
+        doc.setValue("files", List.of(Map.of("file", blob)));
         assertEquals(blob, doc.getValue("files/0/file"));
     }
 
@@ -309,7 +312,7 @@ public class TestDocument {
         assertTrue(list instanceof List);
         assertEquals(0, ((List<?>) list).size());
 
-        doc.setValue("tp:fileList", Collections.singletonList(Blobs.createBlob("My content")));
+        doc.setValue("tp:fileList", List.of(Blobs.createBlob("My content")));
 
         list = doc.getValue("tp:fileList");
         assertTrue(list instanceof List);
@@ -428,8 +431,8 @@ public class TestDocument {
         Blob blob2 = Blobs.createBlob("content2", "text/html");
 
         List<Map<String, Object>> vignettes = new ArrayList<>();
-        vignettes.add(Collections.singletonMap("content", blob1));
-        vignettes.add(Collections.singletonMap("content", blob2));
+        vignettes.add(Map.of("content", blob1));
+        vignettes.add(Map.of("content", blob2));
         Map<String, Object> attachedFile = new HashMap<>();
         attachedFile.put("vignettes", vignettes);
         doc.setValue("cmpf:attachedFile", attachedFile);
@@ -437,13 +440,12 @@ public class TestDocument {
         // list the paths
         List<String> paths = new ArrayList<>();
         doc.visitBlobs(accessor -> paths.add(accessor.getXPath()));
-        assertEquals(Arrays.asList("cmpf:attachedFile/vignettes/0/content", "cmpf:attachedFile/vignettes/1/content"),
-                paths);
+        assertEquals(List.of("cmpf:attachedFile/vignettes/0/content", "cmpf:attachedFile/vignettes/1/content"), paths);
 
         // get the MIME types
         List<String> mimeTypes = new ArrayList<>();
         doc.visitBlobs(accessor -> mimeTypes.add(accessor.getBlob().getMimeType()));
-        assertEquals(Arrays.asList("text/plain", "text/html"), mimeTypes);
+        assertEquals(List.of("text/plain", "text/html"), mimeTypes);
 
         // set the file names
         doc.visitBlobs(accessor -> {
@@ -470,14 +472,13 @@ public class TestDocument {
     }
 
     @Test
-    public void testBlobsVisitorWithOldFacet() throws Exception {
+    public void testBlobsVisitorWithOldFacet() {
         Document root = session.getRootDocument();
         Document doc = root.addChild("doc", "ComplexDoc");
         doc.addFacet("Aged");
 
         Blob blob = Blobs.createBlob("content1", "text/plain");
-        doc.setValue("cmpf:attachedFile", Collections.singletonMap("vignettes",
-                Collections.singletonList(Collections.singletonMap("content", blob))));
+        doc.setValue("cmpf:attachedFile", Map.of("vignettes", List.of(Map.of("content", blob))));
 
         // simulate an obsolete Aged facet present on the document but not in the schema manager
         Map<String, CompositeType> facets = ((SchemaManagerImpl) schemaManager).facets;
@@ -486,7 +487,7 @@ public class TestDocument {
             // list the paths
             List<String> paths = new ArrayList<>();
             doc.visitBlobs(accessor -> paths.add(accessor.getXPath()));
-            assertEquals(Arrays.asList("cmpf:attachedFile/vignettes/0/content"), paths);
+            assertEquals(List.of("cmpf:attachedFile/vignettes/0/content"), paths);
         } finally {
             facets.put("Aged", agedFacet);
         }
@@ -509,7 +510,7 @@ public class TestDocument {
         testGetChangesClearComplexPropertyBeforeSet(false);
     }
 
-    protected void testGetChangesClearComplexPropertyBeforeSet(boolean clearComplexPropertyBeforeSet) throws Exception {
+    protected void testGetChangesClearComplexPropertyBeforeSet(boolean clearComplexPropertyBeforeSet) {
         boolean oldClearComplexPropertyBeforeSet = schemaManager.getClearComplexPropertyBeforeSet();
         try {
             ((SchemaManagerImpl) schemaManager).clearComplexPropertyBeforeSet = clearComplexPropertyBeforeSet;
@@ -564,7 +565,7 @@ public class TestDocument {
         assertTrue(changed);
         changes = writeContext.getChanges();
         if (schemaManager.getClearComplexPropertyBeforeSet()) {
-            expected = new HashSet<>(Arrays.asList( //
+            expected = new HashSet<>(List.of( //
                     "cmpf:attachedFile", //
                     "cmpf:attachedFile/name", //
                     "cmpf:attachedFile/vignettes", //
@@ -581,7 +582,7 @@ public class TestDocument {
             ));
         } else {
             // check that we don't have cmpf:attachedFile/vignettes/0 in the list
-            expected = new HashSet<>(Arrays.asList( //
+            expected = new HashSet<>(List.of( //
                     "cmpf:attachedFile", //
                     "cmpf:attachedFile/vignettes", //
                     "cmpf:attachedFile/vignettes/1", //
@@ -599,7 +600,7 @@ public class TestDocument {
         assertTrue(changed);
         changes = writeContext.getChanges();
         if (schemaManager.getClearComplexPropertyBeforeSet()) {
-            expected = new HashSet<>(Arrays.asList( //
+            expected = new HashSet<>(List.of( //
                     "cmpf:attachedFile", //
                     "cmpf:attachedFile/name", //
                     "cmpf:attachedFile/vignettes", //
@@ -616,7 +617,7 @@ public class TestDocument {
             ));
         } else {
             // check that we don't have cmpf:attachedFile/vignettes/0 in the list
-            expected = new HashSet<>(Arrays.asList( //
+            expected = new HashSet<>(List.of( //
                     "cmpf:attachedFile", //
                     "cmpf:attachedFile/vignettes", //
                     "cmpf:attachedFile/vignettes/1", //
@@ -629,27 +630,28 @@ public class TestDocument {
     @Test
     public void testDeltaAfterPhantomNull() {
         Document root = session.getRootDocument();
-        Document doc = root.addChild("doc", "MyDocType");
+        Document doc = root.addChild("doc", COMMON_DOC_TYPE);
 
         // change to dc:title
-        Schema schema = doc.getType().getSchema("myschema");
+        Schema schema = doc.getType().getSchema(COMMON_SCALAR_SCHEMA);
         DocumentPart dp = new DocumentPartImpl(schema);
         doc.readDocumentPart(dp);
         // change unrelated prop, it should initialize all phantom properties to non-null as well
-        dp.setValue("my:string", "foo");
-        assertTrue(dp.get("my:testDefaultLong").isPhantom());
+        dp.setValue(COMMON_STRING_PROP, "foo");
+        assertTrue(dp.get(COMMON_DEFAULT_LONG_PROP).isPhantom());
         WriteContext writeContext = doc.getWriteContext();
         doc.writeDocumentPart(dp, writeContext);
         session.save();
+
         // then write a delta, the database-level increment must work on 0 and not null
-        dp.setValue("my:testDefaultLong", DeltaLong.valueOf(Long.valueOf(0), 10));
+        dp.setValue(COMMON_DEFAULT_LONG_PROP, DeltaLong.valueOf(Long.valueOf(0), 10));
         writeContext = doc.getWriteContext();
         doc.writeDocumentPart(dp, writeContext);
 
         reopenSession();
         root = session.getRootDocument();
         doc = root.getChild("doc");
-        assertEquals(Long.valueOf(10), doc.getValue("my:testDefaultLong"));
+        assertEquals(Long.valueOf(10), doc.getValue(COMMON_DEFAULT_LONG_PROP));
     }
 
 }
