@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2018-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,12 +20,14 @@ package org.nuxeo.ecm.automation.core.operations.document;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+
+import jakarta.inject.Inject;
 
 import org.junit.After;
 import org.junit.Before;
@@ -42,8 +44,6 @@ import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
 
-import com.google.inject.Inject;
-
 /**
  * @since 10.1
  */
@@ -53,10 +53,10 @@ import com.google.inject.Inject;
 public class OrderDocumentTest {
 
     @Inject
-    CoreSession session;
+    protected CoreSession session;
 
     @Inject
-    AutomationService service;
+    protected AutomationService service;
 
     protected DocumentModel oFolder1;
 
@@ -85,13 +85,13 @@ public class OrderDocumentTest {
     protected OperationContext ctx;
 
     @Before
-    public void initRepo() throws Exception {
+    public void initRepo() {
 
         oFolder1 = session.createDocumentModel("/", "ofolder1", "OrderedFolder");
-        oFolder1.setPropertyValue("dc:title", "Ordered Folder1");
+        oFolder1.setPropertyValue("dc:title", "Ordered Folder1"); // NOSONAR
         oFolder1 = session.createDocument(oFolder1);
 
-        file11 = session.createDocumentModel("/ofolder1", "File11", "File");
+        file11 = session.createDocumentModel("/ofolder1", "File11", "File"); // NOSONAR
         file11.setPropertyValue("dc:title", "File11");
         file11 = session.createDocument(file11);
 
@@ -142,13 +142,10 @@ public class OrderDocumentTest {
     }
 
     @Test
-    public void testIllegalOrderDocument() throws OperationException {
-        try {
-            moveBefore(file12, file21);
-            fail("Should not be able to order in different folder");
-        } catch (NuxeoException e) {
-            assertTrue(e.getMessage().contains(OrderDocument.NOT_SAME_FOLDER_ERROR_MSG));
-        }
+    public void testIllegalOrderDocument() {
+        var e = assertThrows("Should not be able to order in different folder", NuxeoException.class,
+                () -> moveBefore(file12, file21));
+        assertTrue(e.getMessage().contains(OrderDocument.NOT_SAME_FOLDER_ERROR_MSG));
     }
 
     @Test
@@ -292,7 +289,7 @@ public class OrderDocumentTest {
     }
 
     protected void moveBeforeMultiple(DocumentModel[] srcList, DocumentModel dest) throws OperationException {
-        ctx.setInput(Arrays.asList(srcList));
+        ctx.setInput(List.of(srcList));
         Map<String, Object> params = new HashMap<>();
         if (dest != null) {
             params.put("before", dest);
