@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2015-2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2015-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,31 +19,28 @@
  */
 package org.nuxeo.automation.scripting.test;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_ARRAY_STRING_PROP;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_COMPLEXES_PROP;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_COMPLEX_PROP;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_DOC_TYPE;
+import static org.nuxeo.ecm.core.schema.test.CommonDocumentConstants.COMMON_STRINGS_PROP;
 
-import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
-import java.io.PrintStream;
 import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.assertj.core.api.Assertions;
-import org.junit.After;
-import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.nuxeo.automation.scripting.AutomationScriptingFeature;
@@ -69,6 +66,7 @@ import org.nuxeo.ecm.core.api.DocumentModel;
 import org.nuxeo.ecm.core.api.DocumentModelList;
 import org.nuxeo.ecm.core.api.PathRef;
 import org.nuxeo.ecm.core.api.impl.DocumentModelListImpl;
+import org.nuxeo.ecm.platform.test.UserManagerFeature;
 import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
@@ -78,48 +76,29 @@ import org.nuxeo.runtime.test.runner.WithFrameworkProperty;
  * @since 7.2
  */
 @RunWith(FeaturesRunner.class)
-@Features(AutomationScriptingFeature.class)
+@Features({ AutomationScriptingFeature.class, UserManagerFeature.class })
+@Deploy("org.nuxeo.ecm.platform.content.template") // needed for the default-domain creation
+@Deploy("org.nuxeo.ecm.platform.dublincore") // needed for TestPropertiesAccessOnDocuments which gets dc:creator
 public class TestScriptRunnerInfrastructure {
 
-    protected static String[] attachments = { "att1", "att2", "att3" };
+    @Inject
+    protected CoreSession session;
 
     @Inject
-    CoreSession session;
+    protected AutomationService automationService;
 
     @Inject
-    AutomationService automationService;
-
-    @Inject
-    AutomationScriptingFeature feature;
+    protected AutomationScriptingFeature feature;
 
     @Inject
     protected AutomationScriptingService service;
 
-    ByteArrayOutputStream outContent = new ByteArrayOutputStream();
-
-    private PrintStream outStream;
-
     @Inject
-    TracerFactory factory;
-
-    @Before
-    public void setupContext() {
-        outStream = System.out;
-        System.setOut(new PrintStream(outContent));
-    }
-
-    @After
-    public void cleanUpStreams() throws IOException {
-        outContent.close();
-        System.setOut(outStream);
-    }
-
-    @Inject
-    AutomationScriptingFeature scripting;
+    protected TracerFactory factory;
 
     @Test
     public void shouldExecuteSimpleScript() throws Exception {
-        DocumentModelList docs = scripting.run("simpleAutomationScript.js", session, DocumentModelList.class);
+        DocumentModelList docs = feature.run("simpleAutomationScript.js", session, DocumentModelList.class);
         assertEquals(10, docs.size());
     }
 
@@ -192,7 +171,7 @@ public class TestScriptRunnerInfrastructure {
 
     @Test
     public void simpleCallToScriptingOperationsChain() throws Exception {
-        String message = scripting.run("simpleCallToChain.js", session, String.class);
+        String message = feature.run("simpleCallToChain.js", session, String.class);
         assertEquals("Hello Bonjour John", message);
 
     }
@@ -245,37 +224,38 @@ public class TestScriptRunnerInfrastructure {
     }
 
     @Test
-    public void testComplexProperties() throws IOException, OperationException {
-        // Fill the document properties
-        Map<String, Object> creationProps = new HashMap<>();
-        creationProps.put("ds:tableName", "MyTable");
-        creationProps.put("ds:attachments", attachments);
-
-        // send the fields representation as json
-        File fieldAsJsonFile = FileUtils.getResourceFileFromContext("creationFields.json");
-        assertNotNull(fieldAsJsonFile);
-        String fieldsDataAsJSon = org.apache.commons.io.FileUtils.readFileToString(fieldAsJsonFile, UTF_8);
-        fieldsDataAsJSon = fieldsDataAsJSon.replaceAll("\n", "");
-        fieldsDataAsJSon = fieldsDataAsJSon.replaceAll("\r", "");
-        creationProps.put("ds:fields", fieldsDataAsJSon);
-        creationProps.put("dc:title", "testDoc");
-
+    public void testComplexProperties() throws OperationException {
+        String creationProps = """
+                 tcs:long=1720444934
+                 tcs:string=Some string
+                 tcs:strings=["att1", "att2", "att3"]
+                 tcc:complexes=[\
+                  {\
+                    "string": "complexes 0 string",\
+                    "strings": ["att4", "att5", "att6"]\
+                  },\
+                  {\
+                    "string": "complexes 1 string",\
+                    "strings": ["att4", "att5", "att6"]\
+                  }\
+                ]
+                """;
         try (OperationContext ctx = new OperationContext(session)) {
             Map<String, Object> params = new HashMap<>();
-            params.put("properties", toString(creationProps));
-            params.put("type", "DataSet");
+            params.put("properties", creationProps);
+            params.put("type", COMMON_DOC_TYPE);
             params.put("name", "testDoc");
             DocumentModel result = (DocumentModel) automationService.run(ctx, "Scripting.TestComplexProperties",
                     params);
-            assertEquals("whatever",
-                    ((Map<?, ?>) ((List<?>) result.getPropertyValue("ds:fields")).get(0)).get("sqlTypeHint"));
+            assertEquals("complexes 0 string",
+                    ((Map<?, ?>) ((List<?>) result.getPropertyValue(COMMON_COMPLEXES_PROP)).getFirst()).get("string"));
         }
     }
 
     @Test
     public void testClassFilter() throws Exception {
         try {
-            scripting.run("classFilterScript.js", session, Void.class);
+            feature.run("classFilterScript.js", session, Void.class);
         } catch (RuntimeException cause) {
             assertEquals(ClassNotFoundException.class, cause.getCause().getClass());
         }
@@ -284,16 +264,14 @@ public class TestScriptRunnerInfrastructure {
     @Test
     @Deploy("org.nuxeo.ecm.automation.scripting.tests:OSGI-INF/classfilter-contrib.xml")
     public void testClassFilterAllowed() throws Exception {
-        // injected fields in features aren't recomputed correctly (bug), so pass service explicitly
-        feature.run(service, "classFilterScript.js", session, Void.class);
+        feature.run("classFilterScript.js", session, Void.class);
     }
 
     @Test
     @Deploy("org.nuxeo.ecm.automation.scripting.tests:OSGI-INF/classfilter2-contrib.xml")
     public void testClassFilterDenied() throws Exception {
-        // injected fields in features aren't recomputed correctly (bug), so pass service explicitly
         try {
-            feature.run(service, "classFilterScript.js", session, Void.class);
+            feature.run("classFilterScript.js", session, Void.class);
         } catch (RuntimeException cause) {
             assertEquals(ClassNotFoundException.class, cause.getCause().getClass());
         }
@@ -302,23 +280,8 @@ public class TestScriptRunnerInfrastructure {
     @Test
     public void testFn() throws Exception {
         // Test platform functions injection
-        String message = scripting.run("platformFunctions.js", session, String.class);
+        String message = feature.run("platformFunctions.js", session, String.class);
         assertEquals("devnull@nuxeo.com", message);
-    }
-
-    public String toString(Map<String, Object> creationProps) {
-        StringBuilder sb = new StringBuilder();
-        for (Map.Entry<String, Object> entry : creationProps.entrySet()) {
-            Object v = entry.getValue();
-            if (v != null) {
-                if (v.getClass() == String.class) {
-                    sb.append(entry.getKey()).append("=").append(entry.getValue()).append("\n");
-                }
-            } else {
-                sb.append(entry.getKey()).append("=").append("\n");
-            }
-        }
-        return sb.toString();
     }
 
     @Test
@@ -385,22 +348,18 @@ public class TestScriptRunnerInfrastructure {
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void canHandleJavaListMap() throws OperationException {
-        DocumentModel doc = session.createDocumentModel("/", "doc", "List");
-        List<String> attachments = new ArrayList<>();
-        attachments.add("att1");
-        attachments.add("att2");
-        attachments.add("att3");
-        doc.setPropertyValue("list:items", (Serializable) attachments);
-        Map<String, String> values = new HashMap<>();
-        values.put("name", "vlad");
-        values.put("description", "desc");
-        doc.setPropertyValue("list:complexItem", (Serializable) values);
+        DocumentModel doc = session.createDocumentModel("/", "doc", COMMON_DOC_TYPE);
+        doc.setPropertyValue(COMMON_STRINGS_PROP, (Serializable) List.of("attr1", "attr2", "attr3"));
+        doc.setPropertyValue(COMMON_ARRAY_STRING_PROP, (Serializable) List.of("attr3", "attr4", "attr5"));
+        doc.setPropertyValue(COMMON_COMPLEX_PROP, (Serializable) Map.of("string", "vlad"));
         try (OperationContext ctx = new OperationContext(session)) {
             ctx.setInput(session.createDocument(doc));
             DocumentModel result = (DocumentModel) automationService.run(ctx, "Scripting.TestList");
-            assertEquals("newValue", ((String[]) result.getPropertyValue("list:items"))[0]);
-            assertEquals("vlad", ((Map<?, ?>) result.getPropertyValue("list:complexItem")).get("name"));
+            assertEquals("newValue", ((List<String>) result.getPropertyValue(COMMON_STRINGS_PROP)).get(0));
+            assertEquals("newValue", ((String[]) result.getPropertyValue(COMMON_ARRAY_STRING_PROP))[2]);
+            assertEquals("vlad", ((Map<?, ?>) result.getPropertyValue(COMMON_COMPLEX_PROP)).get("string"));
         }
     }
 
@@ -652,7 +611,7 @@ public class TestScriptRunnerInfrastructure {
         DocumentModel domain = session.getDocument(new PathRef("/default-domain"));
         DocumentModel workspaces = session.getDocument(new PathRef("/default-domain/workspaces"));
         try (OperationContext ctx = new OperationContext(session)) {
-            ctx.setInput(Arrays.asList(domain, workspaces));
+            ctx.setInput(List.of(domain, workspaces));
             List<DocumentModel> docs = (List<DocumentModel>) automationService.run(ctx,
                     "Scripting.TestInputAdaptedAsDocuments");
             assertEquals(2, docs.size());
@@ -667,7 +626,7 @@ public class TestScriptRunnerInfrastructure {
         Blob blob1 = Blobs.createBlob("Blob1");
         Blob blob2 = Blobs.createBlob("Blob2");
         try (OperationContext ctx = new OperationContext(session)) {
-            ctx.setInput(Arrays.asList(blob1, blob2));
+            ctx.setInput(List.of(blob1, blob2));
             List<Blob> blobs = (List<Blob>) automationService.run(ctx, "Scripting.TestInputAdaptedAsBlobs");
             assertEquals(2, blobs.size());
             assertEquals("Blob1", blobs.get(0).getString());
@@ -692,19 +651,16 @@ public class TestScriptRunnerInfrastructure {
     @SuppressWarnings("unchecked")
     @Test
     public void testUpdateComplexProperties() throws OperationException {
-        DocumentModel doc = session.createDocumentModel("/", "docComplex", "List");
-        Map<String, Serializable> map = new HashMap<>();
-        map.put("name", "name");
-        map.put("description", "description");
-        doc.setPropertyValue("list:complexItem", (Serializable) map);
+        DocumentModel doc = session.createDocumentModel("/", "docComplex", COMMON_DOC_TYPE);
+        doc.setPropertyValue(COMMON_COMPLEX_PROP, (Serializable) Map.of("string", "Nuxeo", "integer", 1_000));
         doc = session.createDocument(doc);
         try (OperationContext ctx = new OperationContext(session)) {
             ctx.setInput(doc);
             DocumentModel res = (DocumentModel) automationService.run(ctx, "Scripting.TestUpdateComplexProperties");
             Map<String, Serializable> complexItem = (Map<String, Serializable>) res.getPropertyValue(
-                    "list:complexItem");
-            assertEquals("foo", complexItem.get("name"));
-            assertEquals("bar", complexItem.get("description"));
+                    COMMON_COMPLEX_PROP);
+            assertEquals("Hyland", complexItem.get("string"));
+            assertEquals(10_000L, complexItem.get("integer"));
         }
     }
 
@@ -714,7 +670,7 @@ public class TestScriptRunnerInfrastructure {
         DocumentModel domain = session.getDocument(new PathRef("/default-domain"));
         DocumentModel workspaces = session.getDocument(new PathRef("/default-domain/workspaces"));
         try (OperationContext ctx = new OperationContext(session)) {
-            ctx.setInput(Arrays.asList(domain, workspaces));
+            ctx.setInput(List.of(domain, workspaces));
             List<DocumentModel> docs = (List<DocumentModel>) automationService.run(ctx,
                     "Scripting.TestPropertiesAccessOnDocuments");
             assertEquals(2, docs.size());
@@ -745,10 +701,10 @@ public class TestScriptRunnerInfrastructure {
         DocumentModel domain = session.getDocument(new PathRef("/default-domain"));
         DocumentModel workspaces = session.getDocument(new PathRef("/default-domain/workspaces"));
         DocumentModel doc = session.createDocumentModel("/", "file", "FileWithDocumentFields");
-        doc.setPropertyValue("df:documentIds", (Serializable) Arrays.asList(computeDocumentFieldRef(domain.getId()),
+        doc.setPropertyValue("df:documentIds", (Serializable) List.of(computeDocumentFieldRef(domain.getId()),
                 computeDocumentFieldRef(workspaces.getId())));
         doc.setPropertyValue("df:documentPaths",
-                (Serializable) Arrays.asList(computeDocumentFieldRef(workspaces.getPathAsString()),
+                (Serializable) List.of(computeDocumentFieldRef(workspaces.getPathAsString()),
                         computeDocumentFieldRef(domain.getPathAsString())));
         doc = session.createDocument(doc);
         try (OperationContext ctx = new OperationContext(session)) {
@@ -773,7 +729,7 @@ public class TestScriptRunnerInfrastructure {
     @Test
     public void testImportWithClassFilter() throws IOException, OperationException {
         try (OperationContext ctx = new OperationContext(session)) {
-            Blob blob = (Blob) automationService.run(ctx, "Scripting.TestImport", Collections.emptyMap());
+            Blob blob = (Blob) automationService.run(ctx, "Scripting.TestImport", Map.of());
             assertEquals("application/json", blob.getMimeType());
             String string = blob.getString();
             assertTrue(string, string.startsWith("{'uuid': "));
