@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2015-2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2015-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,17 +21,16 @@ package org.nuxeo.ecm.multi.tenant;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.nuxeo.ecm.multi.tenant.Constants.POWER_USERS_GROUP;
 
-import javax.inject.Inject;
-import javax.security.auth.login.LoginException;
-
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import javax.security.auth.login.LoginException;
+
+import jakarta.inject.Inject;
+
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.nuxeo.directory.test.DirectoryFeature;
 import org.nuxeo.ecm.core.api.CoreSession;
 import org.nuxeo.ecm.core.api.DocumentModelList;
 import org.nuxeo.ecm.core.api.NuxeoPrincipal;
@@ -41,8 +40,6 @@ import org.nuxeo.ecm.core.test.annotations.RepositoryConfig;
 import org.nuxeo.ecm.directory.DirectoryException;
 import org.nuxeo.ecm.directory.Session;
 import org.nuxeo.ecm.directory.api.DirectoryService;
-import org.nuxeo.ecm.platform.test.NuxeoLoginFeature;
-import org.nuxeo.ecm.platform.test.PlatformFeature;
 import org.nuxeo.ecm.platform.usermanager.UserManager;
 import org.nuxeo.runtime.api.Framework;
 import org.nuxeo.runtime.api.login.NuxeoLoginContext;
@@ -56,14 +53,9 @@ import org.nuxeo.runtime.test.runner.FeaturesRunner;
  * @since 10.2
  */
 @RunWith(FeaturesRunner.class)
-@Features({ DirectoryFeature.class, NuxeoLoginFeature.class, PlatformFeature.class })
-@Deploy("org.nuxeo.ecm.default.config")
-@Deploy("org.nuxeo.ecm.platform.userworkspace")
-@Deploy("org.nuxeo.ecm.multi.tenant")
-@Deploy("org.nuxeo.ecm.multi.tenant:multi-tenant-test-contrib.xml")
+@Features(MultiTenantCoreFeature.class)
 @Deploy("org.nuxeo.ecm.multi.tenant:multi-tenant-enabled-default-test-contrib.xml")
 @Deploy("org.nuxeo.ecm.multi.tenant:multi-tenant-test-directories-contrib.xml")
-@Deploy("org.nuxeo.ecm.platform.test:test-usermanagerimpl/userservice-config.xml")
 @RepositoryConfig(cleanup = Granularity.METHOD, init = MultiTenantRepositoryInit.class)
 public class TestMultiTenantDirectories {
 
@@ -115,7 +107,7 @@ public class TestMultiTenantDirectories {
         Framework.doPrivileged(() -> {
             // Open the testDirectory
             try (Session sessionDir = directoryService.open("testDirectory")) {
-                DocumentModelList entries = sessionDir.query(Collections.emptyMap());
+                DocumentModelList entries = sessionDir.query(Map.of());
                 assertThat(entries).hasSize(2);
             }
         });
@@ -146,7 +138,8 @@ public class TestMultiTenantDirectories {
             try {
                 sessionDir.createEntry(newEntry);
             } catch (DirectoryException e) {
-                assertThat(e.getMessage()).isEqualTo("Entry with id tenant_domain0_key0 already exists in directory testDirectory");
+                assertThat(e.getMessage()).isEqualTo(
+                        "Entry with id tenant_domain0_key0 already exists in directory testDirectory");
             }
         }
     }
