@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2015-2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2015-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,23 +15,21 @@
  *
  * Contributors:
  *     <a href="mailto:grenard@nuxeo.com">Guillaume Renard</a>
- *
  */
-
 package org.nuxeo.ecm.platform.routing.core.audit;
 
-import static org.nuxeo.ecm.platform.audit.api.BuiltinLogEntryData.LOG_CATEGORY;
-import static org.nuxeo.ecm.platform.audit.api.BuiltinLogEntryData.LOG_DOC_UUID;
-import static org.nuxeo.ecm.platform.audit.api.BuiltinLogEntryData.LOG_EVENT_ID;
+import static org.nuxeo.audit.api.LogEntryConstants.LOG_CATEGORY;
+import static org.nuxeo.audit.api.LogEntryConstants.LOG_DOC_UUID;
+import static org.nuxeo.audit.api.LogEntryConstants.LOG_EVENT_ID;
 
 import java.util.Date;
 import java.util.List;
 
 import org.apache.commons.lang3.StringUtils;
+import org.nuxeo.audit.api.AuditQueryBuilder;
+import org.nuxeo.audit.api.LogEntry;
+import org.nuxeo.audit.service.AuditBackend;
 import org.nuxeo.ecm.core.query.sql.model.Predicates;
-import org.nuxeo.ecm.platform.audit.api.AuditQueryBuilder;
-import org.nuxeo.ecm.platform.audit.api.LogEntry;
-import org.nuxeo.ecm.platform.audit.api.Logs;
 import org.nuxeo.ecm.platform.routing.api.DocumentRoutingConstants;
 import org.nuxeo.runtime.api.Framework;
 
@@ -59,16 +57,16 @@ public final class RoutingAuditHelper {
      * @since 7.4
      */
     public static long computeElapsedTime(DocumentRoutingConstants.Events event, String elementId) {
-        Logs logs = Framework.getService(Logs.class);
-        if (logs != null && StringUtils.isNotBlank(elementId)) {
-            List<LogEntry> logEntries = logs.queryLogs(
+        var auditBackend = Framework.getService(AuditBackend.class);
+        if (auditBackend != null && StringUtils.isNotBlank(elementId)) {
+            List<LogEntry> logEntries = auditBackend.queryLogs(
                     new AuditQueryBuilder().predicate(Predicates.eq(LOG_DOC_UUID, elementId))
                                            .and(Predicates.eq(LOG_CATEGORY, DocumentRoutingConstants.ROUTING_CATEGORY))
                                            .and(Predicates.eq(LOG_EVENT_ID, event.name()))
                                            .defaultOrder()
                                            .limit(1));
-            if (logEntries.size() > 0) {
-                LogEntry logEntry = logEntries.get(0);
+            if (!logEntries.isEmpty()) {
+                LogEntry logEntry = logEntries.getFirst();
                 Date start = logEntry.getEventDate();
                 return new Date().getTime() - start.getTime();
             }
