@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2014-2019 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2014-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,9 +16,7 @@
  * Contributors:
  *     <a href="mailto:grenard@nuxeo.com">Guillaume Renard</a>
  *     <a href="mailto:ncunha@nuxeo.com">Nuno Cunha</a>
- *
  */
-
 package org.nuxeo.ecm.restapi.server;
 
 import static org.apache.http.HttpStatus.SC_CONFLICT;
@@ -36,7 +34,6 @@ import static org.junit.Assert.assertTrue;
 import java.io.IOException;
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
@@ -45,7 +42,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.UnaryOperator;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.apache.logging.log4j.core.LogEvent;
 import org.junit.Ignore;
@@ -71,7 +68,6 @@ import org.nuxeo.ecm.core.io.registry.context.RenderingContext;
 import org.nuxeo.ecm.core.schema.utils.DateParser;
 import org.nuxeo.ecm.core.test.annotations.Granularity;
 import org.nuxeo.ecm.core.test.annotations.RepositoryConfig;
-import org.nuxeo.ecm.platform.audit.AuditFeature;
 import org.nuxeo.ecm.platform.routing.core.io.DocumentRouteWriter;
 import org.nuxeo.ecm.platform.routing.core.io.TaskWriter;
 import org.nuxeo.ecm.platform.routing.core.io.enrichers.PendingTasksJsonEnricher;
@@ -83,15 +79,16 @@ import org.nuxeo.ecm.platform.routing.test.WorkflowFeature;
 import org.nuxeo.ecm.platform.task.Task;
 import org.nuxeo.ecm.platform.task.TaskService;
 import org.nuxeo.ecm.platform.usermanager.UserManager;
-import org.nuxeo.ecm.restapi.jaxrs.io.RestConstants;
-import org.nuxeo.ecm.restapi.server.jaxrs.routing.adapter.TaskAdapter;
-import org.nuxeo.ecm.restapi.server.jaxrs.routing.adapter.WorkflowAdapter;
+import org.nuxeo.ecm.restapi.io.RestConstants;
+import org.nuxeo.ecm.restapi.server.routing.adapter.TaskAdapter;
+import org.nuxeo.ecm.restapi.server.routing.adapter.WorkflowAdapter;
 import org.nuxeo.ecm.restapi.test.RestServerFeature;
 import org.nuxeo.ecm.restapi.test.RestServerInit;
 import org.nuxeo.http.test.HttpClientTestRule;
 import org.nuxeo.http.test.handler.HttpStatusCodeHandler;
 import org.nuxeo.http.test.handler.JsonNodeHandler;
 import org.nuxeo.runtime.api.Framework;
+import org.nuxeo.runtime.test.runner.BlacklistComponent;
 import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
@@ -108,12 +105,12 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
  * @since 7.2
  */
 @RunWith(FeaturesRunner.class)
-@Features({ RestServerFeature.class, WorkflowFeature.class, AuditFeature.class, LogCaptureFeature.class })
+@Features({ WorkflowFeature.class, RestServerFeature.class, LogCaptureFeature.class })
 @RepositoryConfig(cleanup = Granularity.METHOD, init = RestServerInit.class)
 @Deploy("org.nuxeo.ecm.platform.restapi.server.routing")
 @Deploy("org.nuxeo.ecm.platform.routing.default")
-@Deploy("org.nuxeo.ecm.platform.filemanager")
-@Deploy("org.nuxeo.ecm.actions")
+// needs NotificationService & MailService
+@BlacklistComponent("org.nuxeo.ecm.platform.notification.document.routing.NotificationContrib")
 public class WorkflowEndpointTest {
 
     protected static final int NB_WF = 5;
@@ -281,8 +278,7 @@ public class WorkflowEndpointTest {
         var jsonNodeHandler = new JsonNodeHandler();
         var statusCodeHandler = new HttpStatusCodeHandler();
 
-        List<String> expectedNames = Arrays.asList("SerialDocumentReview", "ParallelDocumentReview");
-        Collections.sort(expectedNames);
+        List<String> expectedNames = List.of("ParallelDocumentReview", "SerialDocumentReview");
 
         httpClient.buildGetRequest("/workflowModel").executeAndConsume(jsonNodeHandler, node -> {
             assertEquals(2, node.get("entries").size());
@@ -710,14 +706,6 @@ public class WorkflowEndpointTest {
         });
     }
 
-    /**
-     * @deprecated Since 10.3. Use {@link #assertThatContainsActors} instead.
-     */
-    @Deprecated
-    protected static void assertActorIs(String expectedActor, JsonNode taskNode) {
-        assertThatContainsActors(List.of(expectedActor), taskNode.get("actors"));
-    }
-
     protected static void assertThatContainsActors(List<String> expectedActors, JsonNode actorsNode) {
         Iterator<JsonNode> actorNode = actorsNode.elements();
         List<String> actors = new ArrayList<>();
@@ -1053,6 +1041,7 @@ public class WorkflowEndpointTest {
         Event event = new EventImpl(DocumentRoutingWorkflowInstancesCleanup.CLEANUP_WORKFLOW_EVENT_NAME, eventContext);
         eventService.fireEvent(event);
 
+        // TODO there's a code change here, an additional nextTransaction, to tackle
         txFeature.nextTransaction();
     }
 
@@ -1066,10 +1055,9 @@ public class WorkflowEndpointTest {
         // Create a task not related to a workflow instance
         List<Task> tasks = Framework.getService(TaskService.class)
                                     .createTask(session, session.getPrincipal(), note, "testNoWorkflowTask",
-                                            List.of("user:Administrator"), false, null, null, null,
-                                            Collections.emptyMap(), null);
+                                            List.of("user:Administrator"), false, null, null, null, Map.of(), null);
         assertEquals(1, tasks.size());
-        Task task = tasks.get(0);
+        Task task = tasks.getFirst();
         txFeature.nextTransaction();
 
         JsonNode node = httpClient.buildGetRequest("/id/" + note.getId())
