@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2017 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,21 +24,19 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.nuxeo.ecm.core.schema.SchemaManager;
-import org.nuxeo.ecm.platform.forms.layout.api.BuiltinModes;
 import org.nuxeo.runtime.api.Framework;
+import org.nuxeo.runtime.test.runner.BlacklistComponent;
 import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
@@ -51,6 +49,13 @@ import org.nuxeo.runtime.test.runner.RuntimeFeature;
 @Deploy("org.nuxeo.ecm.platform.types")
 @Deploy("org.nuxeo.ecm.platform.types:test-core-types-bundle.xml")
 @Deploy("org.nuxeo.ecm.platform.types:test-types-bundle.xml")
+// blacklist component that are not useful for the tests
+// loading them would increase the duration as the class uses a lot the HotDeployer
+@BlacklistComponent("org.nuxeo.ecm.platform.types.contrib") // needs DocumentAdapterService
+@BlacklistComponent("org.nuxeo.ecm.platform.types.local.configuration") // needs DocumentAdapterService
+@BlacklistComponent("org.nuxeo.ecm.platform.types.listeners") // needs EventService
+@BlacklistComponent("org.nuxeo.ecm.platform.types.marshallers") // needs MarshallerRegistry
+@BlacklistComponent("org.nuxeo.ecm.platform.content.view.local.configuration") // needs DocumentAdapterService
 public class TypeTest {
 
     @Inject
@@ -65,10 +70,10 @@ public class TypeTest {
 
     @Test
     public void testTypesExtensionPoint() {
-        Collection<Type> types = getTypeService().getTypeRegistry().getTypes();
-        assertEquals(6, types.size());
+        Collection<Type> types = getTypeService().getTypes();
+        assertEquals(4, types.size());
 
-        Type type = getTypeService().getTypeRegistry().getType("MyDocType");
+        Type type = getTypeService().getType("MyDocType");
         assertEquals("MyDocType", type.getId());
         assertEquals("type icon", type.getIcon());
         assertEquals("type label", type.getLabel());
@@ -78,14 +83,6 @@ public class TypeTest {
         assertEquals("action_id1", actions[0]);
         assertEquals("action_id2", actions[1]);
         assertEquals("action_id3", actions[2]);
-
-        String[] anyLayouts = type.getLayouts(BuiltinModes.ANY);
-        assertEquals(1, anyLayouts.length);
-        assertEquals("dublincore", anyLayouts[0]);
-        String[] createLayouts = type.getLayouts(BuiltinModes.CREATE);
-        assertEquals(2, createLayouts.length);
-        assertEquals("dublincore", createLayouts[0]);
-        assertEquals("file", createLayouts[1]);
 
         String[] cv = type.getContentViews("default");
         assertNotNull(cv);
@@ -102,7 +99,7 @@ public class TypeTest {
 
     @Test
     public void testTypeViews() {
-        Type type = getTypeService().getTypeRegistry().getType("MyDocType");
+        Type type = getTypeService().getType("MyDocType");
         assertNotNull(type);
 
         assertEquals("default_view", type.getDefaultView());
@@ -114,7 +111,7 @@ public class TypeTest {
 
     @Test
     public void testAllowedSubTypes() {
-        Type type = getTypeService().getTypeRegistry().getType("MyDocType");
+        Type type = getTypeService().getType("MyDocType");
         Map<String, SubType> allowed = type.getAllowedSubTypes();
         assertEquals(2, allowed.size());
         assertTrue(allowed.containsKey("MyOtherDocType"));
@@ -128,17 +125,17 @@ public class TypeTest {
 
     @Test
     public void testDeploymentOverride() throws Exception {
-        Collection<Type> types = getTypeService().getTypeRegistry().getTypes();
-        assertEquals(6, types.size());
+        Collection<Type> types = getTypeService().getTypes();
+        assertEquals(4, types.size());
 
         hotDeployer.deploy("org.nuxeo.ecm.platform.types:test-types-override-bundle.xml");
 
         // One removed
-        types = getTypeService().getTypeRegistry().getTypes();
-        assertEquals(6, types.size());
+        types = getTypeService().getTypes();
+        assertEquals(4, types.size());
 
         // The Other changed
-        Type type = getTypeService().getTypeRegistry().getType("MyDocType");
+        Type type = getTypeService().getType("MyDocType");
         assertNotNull(type);
 
         assertEquals("MyDocType", type.getId());
@@ -157,12 +154,6 @@ public class TypeTest {
         SubType subType = allowed.get("MyHiddenDocType");
         List<String> hidden = subType.getHidden();
         assertEquals(0, hidden.size());
-
-        // layout override done
-        Map<String, Layouts> layouts = type.getLayouts();
-        assertEquals(2, layouts.size());
-        assertEquals(1, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(0, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
 
         // Override not ready but test that nothing's changed
         String[] actions = type.getActions();
@@ -200,103 +191,14 @@ public class TypeTest {
     }
 
     @Test
-    public void testLayoutOverride() throws Exception {
-        Type type = getTypeService().getTypeRegistry().getType("DocTypeWithLayout");
-        assertEquals("doc type with layout", type.getLabel());
-        assertEquals(2, type.getLayouts().size());
-        assertEquals(1, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(2, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
-
-        hotDeployer.deploy("org.nuxeo.ecm.platform.types:test-types-override-bundle.xml");
-
-        // Test layout is left unchanged
-        type = getTypeService().getTypeRegistry().getType("DocTypeWithLayout");
-        assertEquals("overridden doc type, but layout left unchanged", type.getLabel());
-        assertEquals(2, type.getLayouts().size());
-        assertEquals(1, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(2, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
-    }
-
-    @Test
-    public void testLayoutOverrideWithAppend() throws Exception {
-        Type type = getTypeService().getTypeRegistry().getType("DocTypeTestLayoutOverride");
-        assertEquals("doc type with layout to override", type.getLabel());
-        assertEquals(2, type.getLayouts().size());
-        assertEquals(1, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(2, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
-
-        hotDeployer.deploy("org.nuxeo.ecm.platform.types:test-types-override-bundle.xml");
-
-        type = getTypeService().getTypeRegistry().getType("DocTypeTestLayoutOverride");
-        // Test layout is left unchanged
-        assertEquals(2, type.getLayouts().size());
-        assertEquals(2, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(1, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
-    }
-
-    @Test
-    public void testHotReload() throws Exception {
-        Type type = getTypeService().getTypeRegistry().getType("DocTypeTestLayoutOverride");
-        assertEquals("doc type with layout to override", type.getLabel());
-        assertEquals(2, type.getLayouts().size());
-        assertEquals(1, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(2, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
-        // check the one to be removed is there
-        Type typeToBeRemoved = getTypeService().getTypeRegistry().getType("MyOtherDocType");
-        assertNotNull(typeToBeRemoved);
-        assertEquals("initial alternative doc type", typeToBeRemoved.getLabel());
-        assertEquals("initial icon", typeToBeRemoved.getIcon());
-
-        hotDeployer.deploy("org.nuxeo.ecm.platform.types:test-types-override-bundle.xml");
-
-        type = getTypeService().getTypeRegistry().getType("DocTypeTestLayoutOverride");
-        // Test layout is left unchanged
-        assertEquals(2, type.getLayouts().size());
-        assertEquals(2, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(1, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
-        // check the one to be removed is not there
-        typeToBeRemoved = getTypeService().getTypeRegistry().getType("MyOtherDocType");
-        assertNull(typeToBeRemoved);
-
-        hotDeployer.deploy("org.nuxeo.ecm.platform.types:test-types-override-remove-bundle.xml");
-
-        // check the one to be removed is back there again and has not been
-        // merged with the contribution before removal
-        typeToBeRemoved = getTypeService().getTypeRegistry().getType("MyOtherDocType");
-        assertNotNull(typeToBeRemoved);
-        assertEquals("Resurrected doc type", typeToBeRemoved.getLabel());
-        assertNull(typeToBeRemoved.getIcon());
-
-        hotDeployer.undeploy("org.nuxeo.ecm.platform.types:test-types-override-remove-bundle.xml");
-
-        // check the one to be removed is not there
-        typeToBeRemoved = getTypeService().getTypeRegistry().getType("MyOtherDocType");
-        assertNull(typeToBeRemoved);
-
-        // undeploy org.nuxeo.ecm.platform.types.core.tests:test-types-override-bundle.xml contribution
-        hotDeployer.undeploy("org.nuxeo.ecm.platform.types:test-types-override-bundle.xml");
-
-        type = getTypeService().getTypeRegistry().getType("DocTypeTestLayoutOverride");
-        assertEquals("doc type with layout to override", type.getLabel());
-        assertEquals(2, type.getLayouts().size());
-        assertEquals(1, type.getLayouts().get(BuiltinModes.ANY).getLayouts().length);
-        assertEquals(2, type.getLayouts().get(BuiltinModes.CREATE).getLayouts().length);
-        // check the one to be removed is back there again and again and again
-        typeToBeRemoved = getTypeService().getTypeRegistry().getType("MyOtherDocType");
-        assertNotNull(typeToBeRemoved);
-        assertEquals("initial alternative doc type", typeToBeRemoved.getLabel());
-        assertEquals("initial icon", typeToBeRemoved.getIcon());
-    }
-
-    @Test
     public void testCoreSubTypesWithHotReload() throws Exception {
-        Collection<String> testMyDocTypeSubtypes1 = Arrays.asList("MyOtherDocType", "MyHiddenDocType");
-        Collection<String> testMyDocTypeSubtypes2 = Arrays.asList("MyOtherDocType2", "MyHiddenDocType");
-        Collection<String> testMyDocType2Subtypes1 = Arrays.asList("MyDocType", "MyOtherDocType", "MyHiddenDocType");
-        Collection<String> testMyDocType2Subtypes2 = Arrays.asList("MyDocType", "MyOtherDocType");
-        Collection<String> testMyDocType2Subtypes3 = Arrays.asList("MyDocType");
-        Collection<String> testSchemas = Arrays.asList("schema1", "schema2");
-        Collection<String> testFacets = Arrays.asList("myFacet", "facet1", "facet2");
+        Collection<String> testMyDocTypeSubtypes1 = List.of("MyOtherDocType", "MyHiddenDocType");
+        Collection<String> testMyDocTypeSubtypes2 = List.of("MyOtherDocType2", "MyHiddenDocType");
+        Collection<String> testMyDocType2Subtypes1 = List.of("MyDocType", "MyOtherDocType", "MyHiddenDocType");
+        Collection<String> testMyDocType2Subtypes2 = List.of("MyDocType", "MyOtherDocType");
+        Collection<String> testMyDocType2Subtypes3 = List.of("MyDocType");
+        Collection<String> testSchemas = List.of("schema1", "schema2");
+        Collection<String> testFacets = List.of("myFacet", "facet1", "facet2");
 
         assertSubtypes("MyDocType", testMyDocTypeSubtypes1);
         assertSubtypes("MyDocType2", testMyDocType2Subtypes1);
@@ -307,7 +209,7 @@ public class TypeTest {
 
         assertSubtypes("MyDocType", testMyDocTypeSubtypes2);
         // subtypes differ for MyDocType2 because ecm override contrib removed MyOtherDocType from getTypeService()
-        assertSubtypes("MyDocType2", testMyDocType2Subtypes1, Arrays.asList("MyDocType", "MyHiddenDocType"));
+        assertSubtypes("MyDocType2", testMyDocType2Subtypes1, List.of("MyDocType", "MyHiddenDocType"));
         assertFacetsAndSchemas("MyDocType", testFacets, testSchemas);
 
         // deploy core contribution to override types
@@ -335,8 +237,8 @@ public class TypeTest {
         // undeploy original ecm contribution to override types
         hotDeployer.undeploy("org.nuxeo.ecm.platform.types:test-types-bundle.xml");
 
-        assertSubtypes("MyDocType", Collections.emptyList());
-        assertSubtypes("MyDocType2", testMyDocType2Subtypes3, Collections.emptyList());
+        assertSubtypes("MyDocType", List.of());
+        assertSubtypes("MyDocType2", testMyDocType2Subtypes3, List.of());
         assertFacetsAndSchemas("MyDocType", testFacets, testSchemas);
     }
 
@@ -369,7 +271,7 @@ public class TypeTest {
         assertEquals(facets.size(), currentFacets.size());
         assertTrue(facets.containsAll(currentFacets));
 
-        Collection<String> currentSchemas = Arrays.asList(schemaManager.getDocumentType(docType).getSchemaNames());
+        Collection<String> currentSchemas = List.of(schemaManager.getDocumentType(docType).getSchemaNames());
         assertNotNull(currentSchemas);
         assertEquals(schemas.size(), currentSchemas.size());
         assertTrue(schemas.containsAll(currentSchemas));
