@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2017 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,8 +21,8 @@
  */
 package org.nuxeo.ecm.platform.ui.web.auth;
 
+import static jakarta.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static javax.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
 import static org.nuxeo.ecm.core.api.security.SecurityConstants.SYSTEM_USERNAME;
 import static org.nuxeo.ecm.platform.ui.web.auth.NXAuthConstants.CALLBACK_URL_PARAMETER;
 import static org.nuxeo.ecm.platform.ui.web.auth.NXAuthConstants.DISABLE_REDIRECT_REQUEST_KEY;
@@ -51,10 +51,10 @@ import static org.nuxeo.ecm.platform.ui.web.auth.NXAuthConstants.SWITCH_USER_KEY
 import static org.nuxeo.ecm.platform.ui.web.auth.NXAuthConstants.SWITCH_USER_PAGE;
 import static org.nuxeo.ecm.platform.ui.web.auth.NXAuthConstants.USERIDENT_KEY;
 import static org.nuxeo.ecm.platform.ui.web.auth.NXAuthConstants.USERNAME_KEY;
+import static org.nuxeo.ecm.platform.ui.web.auth.plugins.AnonymousAuthenticator.BLOCK_ANONYMOUS_LOGIN_KEY;
 
 import java.io.IOException;
 import java.io.Serializable;
-import java.io.UnsupportedEncodingException;
 import java.net.SocketException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -68,19 +68,20 @@ import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 import javax.naming.NamingException;
 import javax.security.auth.login.LoginException;
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpServletResponseWrapper;
-import javax.servlet.http.HttpSession;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.UriBuilder;
+
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponseWrapper;
+import jakarta.servlet.http.HttpSession;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.UriBuilder;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
@@ -174,10 +175,6 @@ public class NuxeoAuthenticationFilter implements Filter {
     protected final Counter loginCount = registry.counter(
             MetricRegistry.name("nuxeo", "web", "authentication", "logged-users"));
 
-    @Override
-    public void destroy() {
-    }
-
     protected static boolean sendAuthenticationEvent(UserIdentificationInfo userInfo, String eventId, String comment) {
         return Framework.doPrivileged(() -> {
             EventProducer evtProducer = Framework.getService(EventProducer.class);
@@ -196,7 +193,7 @@ public class NuxeoAuthenticationFilter implements Filter {
 
     protected boolean logAuthenticationAttempt(UserIdentificationInfo userInfo, boolean success) {
         String userName = userInfo.getUserName();
-        if (userName == null || userName.length() == 0) {
+        if (StringUtils.isEmpty(userName)) {
             userName = userInfo.getToken();
         }
 
@@ -217,7 +214,7 @@ public class NuxeoAuthenticationFilter implements Filter {
     protected boolean logLogout(UserIdentificationInfo userInfo) {
         loginCount.dec();
         String userName = userInfo.getUserName();
-        if (userName == null || userName.length() == 0) {
+        if (StringUtils.isEmpty(userName)) {
             userName = userInfo.getToken();
         }
 
@@ -462,6 +459,7 @@ public class NuxeoAuthenticationFilter implements Filter {
                         }
                         if (forceAnonymousLogin && userName.equals(anonymousId)) {
                             userIdent = null;
+                            httpRequest.getSession(true).setAttribute(BLOCK_ANONYMOUS_LOGIN_KEY, true);
                         }
                     }
                     if (userIdent == null && !bypassAuth(httpRequest)) {
@@ -525,7 +523,7 @@ public class NuxeoAuthenticationFilter implements Filter {
 
             if (principal != null) {
                 httpRequest.setAttribute(USERNAME_KEY, principal.getName());
-                if (targetPageURL != null && targetPageURL.length() > 0) {
+                if (StringUtils.isNotEmpty(targetPageURL)) {
                     if (XMLHTTP_REQUEST_TYPE.equalsIgnoreCase(httpRequest.getHeader("X-Requested-With"))) {
                         return;
                     } else {
@@ -553,8 +551,7 @@ public class NuxeoAuthenticationFilter implements Filter {
     public NuxeoAuthenticationPlugin getAuthenticator(CachableUserIdentificationInfo ci) {
         String key = ci.getUserInfo().getAuthPluginName();
         if (key != null) {
-            NuxeoAuthenticationPlugin authPlugin = service.getPlugin(key);
-            return authPlugin;
+            return service.getPlugin(key);
         }
         return null;
     }
@@ -733,14 +730,10 @@ public class NuxeoAuthenticationFilter implements Filter {
             if (cookies != null) {
                 for (Cookie cookie : cookies) {
                     if (NXAuthConstants.START_PAGE_FRAGMENT_KEY.equals(cookie.getName())) {
-                        try {
-                            requestedPage = UriBuilder.fromUri(requestedPage)
-                                                      .fragment(URLDecoder.decode(cookie.getValue(), "UTF-8"))
-                                                      .build()
-                                                      .toString();
-                        } catch (UnsupportedEncodingException e) {
-                            log.error("Failed to decode start page url fragment", e);
-                        }
+                        requestedPage = UriBuilder.fromUri(requestedPage)
+                                                  .fragment(URLDecoder.decode(cookie.getValue(), UTF_8))
+                                                  .build()
+                                                  .toString();
                         // enforce cookie removal
                         cookie.setMaxAge(0);
                         httpResponse.addCookie(cookie);
@@ -903,8 +896,7 @@ public class NuxeoAuthenticationFilter implements Filter {
     }
 
     public static String getRequestedPage(ServletRequest request) {
-        if (request instanceof HttpServletRequest) {
-            HttpServletRequest httpRequest = (HttpServletRequest) request;
+        if (request instanceof HttpServletRequest httpRequest) {
             return getRequestedPage(httpRequest);
         } else {
             return null;
@@ -957,7 +949,7 @@ public class NuxeoAuthenticationFilter implements Filter {
                 throw new NullPointerException("Could not find plugin for name '" + pluginName + "'");
             }
             if (Boolean.TRUE.equals(plugin.needLoginPrompt(httpRequest))) {
-                if (descriptor.getNeedStartingURLSaving()) {
+                if (descriptor.isNeedStartingURLSaving()) {
                     saveRequestedURLBeforeRedirect(httpRequest, httpResponse);
                     httpResponse = new HttpServletResponseWrapper(httpResponse) {
                         @Override
@@ -969,16 +961,13 @@ public class NuxeoAuthenticationFilter implements Filter {
                                 return;
                             }
                             HttpServletResponse response = (HttpServletResponse) getResponse();
-                            StringBuilder sb = new StringBuilder();
-                            sb.append("<script type=\"text/javascript\">\n")
-                              .append("document.cookie = '")
-                              .append(NXAuthConstants.START_PAGE_FRAGMENT_KEY)
-                              .append("=' + encodeURIComponent(window.location.hash.substring(1) || '') + '; path=/';\n")
-                              .append("window.location = '")
-                              .append(location)
-                              .append("';\n");
-                            sb.append("</script>");
-                            String script = sb.toString();
+                            String script = """
+                                    <script type="text/javascript">
+                                      document.cookie ='%s=' + encodeURIComponent(window.location.hash.substring(1) || '') + '; path=/';
+                                      window.location = '%s';
+                                    </script>
+                                    """.formatted(
+                                    NXAuthConstants.START_PAGE_FRAGMENT_KEY, location);
 
                             response.setStatus(SC_UNAUTHORIZED);
                             response.setContentType("text/html;charset=UTF-8");
@@ -1057,10 +1046,10 @@ public class NuxeoAuthenticationFilter implements Filter {
 
         AuthenticationPluginDescriptor desc = service.getDescriptor(pluginName);
 
-        if (desc.getStateful()) {
+        if (desc.isStateful()) {
             return true;
         } else {
-            return desc.getNeedStartingURLSaving();
+            return desc.isNeedStartingURLSaving();
         }
     }
 
